xProj/P.lop/pLib/P.lop_tests.py_/coord/is.txt
>>> 
>>> P.coord.is('?')
  File "<stdin>", line 1
    P.coord.is('?')
             ^
SyntaxError: invalid syntax
>>> P.coord.IS('?')
Valid query is 'P.coord.IS ??'
>>> P.coord.IS('??')

This proc takes a permutation coordinate as a list such as **4 1 2 3** and
returns 1 if coordinate is a valid permutation and returns 0 otherwise.

>>> P.coord.IS([2,3,1,4])
True
>>> P.coord.IS([2,3,1,3])
False
>>> P.coord.IS([10,5,7,21,17,1,19,15,13,3,11,20,4,2,12,9,8,18,16,6,14])
True
>>> P.coord.IS([10,5,7,21,17,1,19,15,13,3,11,20,4,2,12,9,8,18,16,6,13])
False

